force-app/main/default/objects/DD_Policy__c/DD_Policy__c.object-meta.xml
<CustomObject>
    <description>Active dental policy with frozen configuration snapshot from accepted quote</description>
    <label>Policy</label>
    <nameField><displayFormat>POL-{000000}</displayFormat><label>Policy Number</label><type>AutoNumber</type></nameField>
    <pluralLabel>Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>