force-app/main/default/objects/DD_Policy__c/fields/Anniversary_Date__c.field-meta.xml
<CustomField>
    <fullName>Anniversary_Date__c</fullName>
    <label>Anniversary Date</label>
    <type>Date</type>
    <description>Annual renewal date</description>
</CustomField>