force-app/main/default/objects/DD_Policy__c/fields/Annual_Max__c.field-meta.xml
<CustomField>
    <fullName>Annual_Max__c</fullName>
    <label>Annual Maximum</label>
    <type>Currency</type>
    <precision>18</precision><scale>2</scale><required>false</required>
    <description>Frozen annual max from quote config</description>
</CustomField>