force-app/main/default/objects/DD_Policy__c/fields/Deductible_Individual__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Individual__c</fullName>
    <label>Individual Deductible</label>
    <type>Currency</type>
    <precision>18</precision><scale>2</scale><required>false</required>
    <description>Frozen deductible</description>
</CustomField>