force-app/main/default/objects/DD_Policy__c/fields/Monthly_Premium__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Premium__c</fullName>
    <label>Monthly Premium</label>
    <type>Currency</type>
    <precision>18</precision><scale>2</scale><required>false</required>
    <description>Total monthly premium at bind</description>
</CustomField>