force-app/main/default/objects/DD_Policy__c/fields/Ortho_Type__c.field-meta.xml
<CustomField>
    <fullName>Ortho_Type__c</fullName>
    <label>Ortho Type</label>
    <type>Text</type>
    <length>50</length><required>false</required><unique>false</unique><externalId>false</externalId>
    <description>Frozen ortho selection</description>
</CustomField>