force-app/main/default/objects/DD_Policy__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <label>Quote</label>
    <type>Lookup</type>
    <referenceTo>Quote</referenceTo><relationshipLabel>Policies</relationshipLabel><relationshipName>Policies_Quote</relationshipName><required>false</required>
    <description>Source quote</description>
</CustomField>