force-app/main/default/objects/DD_Policy__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <required>true</required><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Active</fullName><default>false</default><label>Active</label></value><value><fullName>Terminated</fullName><default>false</default><label>Terminated</label></value><value><fullName>COBRA</fullName><default>false</default><label>COBRA</label></value><value><fullName>Suspended</fullName><default>false</default><label>Suspended</label></value></valueSetDefinition></valueSet>
    <description>Policy lifecycle status</description>
</CustomField>