force-app/main/default/objects/DD_Policy__c/fields/Term_Date__c.field-meta.xml
<CustomField>
    <fullName>Term_Date__c</fullName>
    <label>Termination Date</label>
    <type>Date</type>
    <description>Coverage end date</description>
</CustomField>