force-app/main/default/objects/DD_Policy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Product__c</columns>
    <columns>Status__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Monthly_Premium__c</columns>
</ListView>